Pretty please be final fix for divider gap 350
Possible fix for https://github.com/maithemewp/mai-engine/issues/350

--- a/assets/scss/components/blocks/_divider.scss
+++ b/assets/scss/components/blocks/_divider.scss
@@ -4,15 +4,9 @@
 	display: block;
 	width: var(--divider-width, var(--alignfull-width, auto));
 	height: var(--divider-height);
+	margin-top: -1px;
+	margin-bottom: -1px;
 	background: var(--divider-background-color, transparent);
-	transform: translateY(var(--divider-translateY, 1px)); // Browser sub-pixel fix.
-
-	.wp-block-cover + &,
-	.wp-block-group + &,
-	.wp-block-cover__inner-container &:first-child,
-	.wp-block-group__inner-container &:first-child {
-		--divider-translateY: -1px;
-	}
 }
 
 .wp-block-cover,
